# gtkplt

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  axis.c  axis.h  datasets.c  datasets.h  geometry.c  geometry.h  graphs.c  graphs.h  gtkplt.h  gtkplt_plot_widget.c  labels.c  labels.h  legend.c  legend.h  margins.c  margins.h  plot.c  plot.h  plotarea.c  plotarea.h  text.c  text.h  title.c  title.h
test/: Makefile.am  axis_scaling.c  axis_scaling.sh  axis_scaling_auto.c  axis_scaling_auto.sh  axis_scaling_half_auto.c  axis_scaling_half_auto.sh  axis_titles.c  axis_titles.sh  graphcolor.c  graphcolor.sh  gtk.c  gtk.sh  gtk_cairo.c  gtk_cairo.sh  gtkplt_widget.c  gtkplt_widget.sh  lineplot.c  lineplot.sh  lineplot2.c  lineplot2.sh  linepointplot.c  linepointplot.sh  plot_title.c  plot_title.sh  test.c  test.sh
